--- a/compat/compat.dox
+++ b/compat/compat.dox
@@ -66,7 +66,7 @@ used seamlessly across all platforms by the main code.
 \par Wrappers
 Sometimes common and useful library functions are not always as safe as they could be.
 An alternative which wraps the original in extra safety checks is provided under the
-same name with an 'x' pre-pended. Currently these extra protections are added on string
+same name with an 'x' prepended. Currently these extra protections are added on string
 handling and memory allocation.
 
 
